platform/network-policies/base/default-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  # The namespace will be set when used via Kustomize
spec:
  podSelector: {}
  policyTypes:
  - Ingress
...
